kube-deploy.yaml
# Source: service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlu-code-pattern
  labels:
    app: nlu-code-pattern
    chart: nlu-code-pattern-0.1.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: nlu-code-pattern
---
# Source: deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nlu-code-pattern
  labels:
    app: nlu-code-pattern
    chart: nlu-code-pattern-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlu-code-pattern
  template:
    metadata:
      labels:
        app: nlu-code-pattern
    spec:
      containers:
        - name: nlu-code-pattern
          image: 'ibmwatson/nlu-code-pattern:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: '/'
              port: 5000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: '/'
              port: 5000
              scheme: HTTP
---
# Source: ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nlu-code-pattern
  labels:
    app: nlu-code-pattern
    chart: nlu-code-pattern-0.1.0
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: nlu-code-pattern
              servicePort: 5000
